--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,94 @@
-body {
-  background-color: black;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.text {
-  color: white;
+body {
+  font-family: sans-serif;
+  background-color: lightslategray;
+}
+#App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .header {
+    text-transform: uppercase;
+  }
+  .sides {
+    display: flex;
+    margin: 10px;
+  }
+  .wrapper {
+    width: 300px;
+    height: 300px;
+    background-color: lightyellow;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(100px, auto));
+    grid-template-rows: repeat(3, minmax(100px, auto));
+
+    &__item {
+      text-align: center;
+      text-align: center;
+      width: 100%;
+      height: 100%;
+      padding-top: 30px;
+      border: 1px solid black;
+      font-size: 2.3rem;
+      cursor: pointer;
+      &--top {
+        border-top: none;
+      }
+      &--left {
+        border-left: none;
+      }
+      &--right {
+        border-right: none;
+      }
+      &--bottom {
+        border-bottom: none;
+      }
+    }
+  }
+
+  .winner-page {
+    visibility: hidden;
+    position: absolute;
+    font-size: 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    &--link {
+      margin: 0px 0;
+      text-decoration: none;
+      color: rgb(56, 255, 56);
+    }
+  }
+  .tie-page {
+    visibility: hidden;
+    position: absolute;
+    font-size: 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    &--link {
+      margin: 0px 0;
+      text-decoration: none;
+      color: rgb(56, 255, 56);
+    }
+  }
 }
